# vidx

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  config.sample.yaml  index.html  mkdocs.yml  project_16x9.yaml  pyproject.toml  requirements.txt  run.bat  setup.py  sitemap.xml  vidx.spec  vidx_entry.py
.github/workflows/: docs.yml  release.yml  tests.yml
announcement_slack/: index.html
code_health_report/: index.html
configuration_guide/: index.html
demo_script_qa/: index.html
docs/: announcement_slack.md  code_health_report.md  configuration_guide.md  demo_script_qa.md  getting_started.md  index.md  pandoc-template.latex  project_brief.md  publishing_guide.md  security_review.md  session_summary.md  terminal_output_samples.md  test_coverage_report.md  todo.md  user_guide.md  vidx_explainer.md  yt_integration_plan.md
examples/: bcab-mrk.yaml  sindhi_mark_16x9.yaml  sindhi_matthew_batch.yaml  whole_book_batch.yaml
getting_started/: index.html
project_brief/: index.html
publishing_guide/: index.html
search/: search_index.json
security_review/: index.html
session_summary/: index.html
src/: C01-01-MRK-05-timing.txt
src/mal/: 42MRKMAL10RO.SFM  58PHMMAL10RO.SFM  C01-57-PHM-01-timing.txt  mal_16x9.yaml  mal_9x16.yaml
src/mal/mrk/timing/: C01-41-MRK-01-timing.txt  C01-41-MRK-02-timing.txt  C01-41-MRK-03-timing.txt  (+13 more)
src/snd/: 41MATsnd.SFM  42MRKsnd.SFM  43LUKsnd.SFM  44JHNsnd.SFM  45ACTsnd.SFM  MRK_05_Segmented.srt
terminal_output_samples/: index.html
test_coverage_report/: index.html
tests/: __init__.py  test_ass_generator.py  test_batch_runner.py  test_bumpers.py  test_cli.py  test_config.py  test_ffmpeg_builder.py  test_manifest.py  test_progress.py  test_usfm_parser.py  test_youtube.py
todo/: index.html
user_guide/: index.html
vidx/: __init__.py  ass_generator.py  batch_runner.py  bumpers.py  cli.py  config.py  ffmpeg_builder.py  manifest.py  progress.py  usfm_parser.py  youtube.py
vidx_explainer/: index.html
yt_integration_plan/: index.html
(+104 files in other folders)
