[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vidx"
version = "0.2.0"
description = "Scripture video rendering companion engine to AUDX (combines USFM files, timing maps, audio, and FFmpeg)."
authors = [
    {name = "Bridgeconn"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyyaml>=5.4.1",
    "rich>=13.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
vidx = "vidx.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
